[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Alex M <amcnurlan@gmail.com>"]
edition = "2018"
name = "lsm303agr-f3-disco"
description = "LSM303AGR example for the STM32F3DISCOVERY board"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
panic-itm = "0.4.0"
lsm303agr = "1.0.0"
embedded-hal = "1.0.0"
switch-hal = "0.4.0"
m = "0.1.1"

[dependencies.stm32f3xx-hal]
version = "0.10"
features = ["rt", "stm32f303xc"] # replace the model of your microcontroller here

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
